--- a/inst/rmarkdown/templates/AAGI HTML/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/AAGI HTML/skeleton/skeleton.Rmd
@@ -24,7 +24,9 @@ output:
     toc: false
     toc_depth: '5'
 ---
-
+<div style="text-align: center; margin-bottom: 10px;">
+  <img src="images/Partners.png" style="height: 160px;" />
+</div>
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   #  include = FALSE, #Include chunk output
