--- a/inst/rmarkdown/templates/AAGI HTML/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/AAGI HTML/skeleton/skeleton.Rmd
@@ -25,7 +25,7 @@ output:
     toc_depth: '5'
 ---
 <div style="text-align: center; margin-bottom: 10px;">
-  <img src="images/Partners.png" style="height: 160px;" />
+  <img src="images/Partners.png" style="width: 100%" />
 </div>
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
