--- a/inst/rmarkdown/templates/AAGI HTML/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/AAGI HTML/skeleton/skeleton.Rmd
@@ -18,15 +18,13 @@ output:
     css: UQtstyles.css
     includes: 
       in_header: header.html
+      before_body: before_body.html
     self_contained: true
     fig_align: center
   pdf_document:
     toc: false
     toc_depth: '5'
 ---
-<div style="text-align: center; margin-bottom: 10px;">
-  <img src="images/Partners.png" style="width: 100%" />
-</div>
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   #  include = FALSE, #Include chunk output
