--- a/inst/rmarkdown/templates/AAGI HTML/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/AAGI HTML/skeleton/skeleton.Rmd
@@ -15,7 +15,7 @@ output:
     toc_depth: 5
     toc_float:
       position: left
-    css: UQtstyles.css
+    css: Styles.css
     includes: 
       in_header: header.html
     self_contained: true
@@ -24,9 +24,7 @@ output:
     toc: false
     toc_depth: '5'
 ---
-<div style="text-align: center; margin-top: 10px; margin-bottom: 20px;">
-  <img src="https://github.com/AAGI-AUS/AAGI-Style-Guide-and-Logos/blob/main/assets/Partners.svg?raw=true" style="width: 100%;" />
-</div>
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   #  include = FALSE, #Include chunk output
